--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 <h1>We Are at War</h1>
                 <h2>Conspiracies & other Nonsense by Nick</h2>
                 <img id="gunBtn" src="ak47.png" alt="ak47">
+                <p>Tap the AK!</p>
             </div>
             <div id="quote-space">
                 <p id="quote"></p>
